Updated file references to match current names

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <link rel="icon" type="image/x-icon" href="map.png">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="indexStyle.css"/>
 
    <!-- All head data below here goes in page code injection in squarespace -->
    <!-- Leaflet Imports -->
@@ -94,7 +94,7 @@
             </div>
         </div>
     </main>
-    <script src="https://thegoodcarbongit.github.io/map-page//map-script.js"></script>
+    <script src="indexScript.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/willmyethewebsiteguy/customBreakpoint@1/customBreakpoint.min.js"></script>
 </body>
 </html>
