--- a/managementPage.html
+++ b/managementPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map Management Page</title>
     <link rel="icon" type="image/x-icon" href="map.png">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="managementStyle.css"/>
 
     <!-- All header information from here down is injected into Squarespace page header code injection -->
     <!-- Leaflet Imports -->
@@ -89,6 +89,6 @@
             </div>
         </div>
     </main>
-    <script src="https://thegoodcarbongit.github.io/Map-management-page/management-page-script.js"></script>
+    <script src="managementScript.js"></script>
 </body>
 </html>
